# books

./: .editorconfig  .flake8  .gitattributes  CODE_OF_CONDUCT.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
server/books/: settings.py  urls.py
server/store/: admin.py  logic.py  models.py  permissions.py  serializer.py  urls.py  views.py
server/store/migrations/: 0001_initial.py  0002_book_author_name_alter_book_image.py  0003_book_owner.py  0004_userbookrelation.py  0005_book_readers_alter_book_owner.py  0006_alter_userbookrelation_book.py  0007_alter_userbookrelation_rate.py
server/store/tests/: __init__.py  test_api.py  test_logic.py  test_serializers.py
server/templates/: oauth.html
